# GameEngine

./: CMakeLists.txt  README.md
.cache/clangd/index/: Camera.cpp.0C139954ACAF07CA.idx  Camera.cpp.617ACA789FA303A5.idx  Camera.h.562C5E2CA852E065.idx  Camera.h.63BA67BC08D0FA0B.idx  Cube.cpp.7FB200E5147ED6BA.idx  Cube.cpp.9DD2AEDBDFD79801.idx  Cube.h.26432AAB674FA44F.idx  Cube.h.9B3B012D3BEFCB0E.idx  GameEngine.cpp.283DD2EBA68FD07C.idx  GameEngine.cpp.29038F49BE0852AB.idx  GameEngine.h.06DB472AC29ACD35.idx  GameEngine.h.805614DC9BB8CEAD.idx  Object.cpp.5124B786E5E8C765.idx  Object.cpp.7802F5EDB1FA4836.idx  Object.h.2AB735AE1BA17B86.idx  Object.h.2AFECBD252220EB4.idx  Renderer.cpp.46760E62218020DC.idx  Renderer.cpp.8D7DD852392D92A7.idx  Renderer.h.9B553D64AC9DFDA8.idx  Renderer.h.E9FB19893D7418D7.idx  Shader.cpp.42B4ABD35D80278B.idx  Shader.cpp.F997BA1808E87DA0.idx  Shader.h.E7433CDC9EC90439.idx  Shader.h.EEB17A056B5D0B97.idx  Texture.cpp.503FFAC2A4DA1E1A.idx  Texture.cpp.E54D25E61863843D.idx  Texture.h.08D9EABBF2708BD3.idx  Texture.h.A96107D107B8DE16.idx  _fixes.hpp.20D61328FCFF0B06.idx  _fixes.hpp.5640941A32039053.idx  _vectorize.hpp.31ABF4B869FDFE73.idx  (+226 more)
cmake-4.0.2-tutorial-source/Step1/: CMakeLists.txt  tutorial.cxx
cmake-4.0.2-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: glad.c  main  main.cpp
src/core/: Cube.cpp  Cube.h  GameEngine.cpp  GameEngine.h  Object.cpp  Object.h
src/graphics/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
(+18 files in other folders)
